better EQ gui control

--- a/assets/layouts/track_settings_eq.xml
+++ b/assets/layouts/track_settings_eq.xml
@@ -69,7 +69,7 @@
       </children>
     </Layout>
     <Layout name="ctrl" type="NORMAL">
-      <x>SCALE 0.060000</x>
+      <x>SCALE 0.10000</x>
       <y>SCALE 0.117647</y>
       <w>SCALE 0.850417</w>
       <h>SCALE 0.250359</h>
@@ -82,9 +82,34 @@
           <children>
           </children>
         </Layout>
+        <Layout name="filter_active_toggle_area" type="NORMAL">
+          <x>REL 20</x>
+          <y>STACK 12</y>
+          <w>REL 481</w>
+          <h>REL 21</h>
+          <children>
+	    <Layout name="filter_active_toggle" type="NORMAL">
+              <x>REL 0</x>
+              <y>REL 0</y>
+              <w>REL 20</w>
+              <h>REL 20</h>
+              <children>
+              </children>
+	    </Layout>
+	    <Layout name="filter_active_toggle_label" type="NORMAL">
+              <x>STACK 10</x>
+              <y>REL 0</y>
+              <w>REL 20</w>
+              <h>REL 20</h>
+              <children>
+              </children>
+	    </Layout>
+
+          </children>
+        </Layout>
         <Layout name="type_selector" type="NORMAL">
-          <x>REL 0</x>
-          <y>STACK 33</y>
+          <x>REL 20</x>
+          <y>STACK 12</y>
           <w>REL 481</w>
           <h>REL 113</h>
           <children>
