--- a/assets/layouts/synth_amp_env.xml
+++ b/assets/layouts/synth_amp_env.xml
@@ -106,7 +106,7 @@
       <w>SCALE 0.864167</w>
       <h>ABS 24</h>
       <children>
-        <Layout name="exponent_label" type="NORMAL">
+        <Layout name="ramp_exp_label" type="NORMAL">
           <x>REL 0</x>
           <y>REL 0</y>
           <w>REL 150</w>
@@ -114,7 +114,7 @@
           <children>
           </children>
         </Layout>
-        <Layout name="exponent_slider" type="NORMAL">
+        <Layout name="ramp_exp_slider" type="NORMAL">
           <x>REL 150</x>
           <y>REL 0</y>
           <w>COMPLEMENT 1</w>
