--- a/assets/layouts/synth_filter.xml
+++ b/assets/layouts/synth_filter.xml
@@ -34,7 +34,7 @@
       <w>SCALE 0.864167</w>
       <h>ABS 24</h>
       <children>
-        <Layout name="freq_scalar_label" type="NORMAL">
+        <Layout name="base_cutoff_label" type="NORMAL">
           <x>REL 0</x>
           <y>REL 0</y>
           <w>REL 250</w>
@@ -42,7 +42,7 @@
           <children>
           </children>
         </Layout>
-        <Layout name="freq_scalar_slider" type="NORMAL">
+        <Layout name="base_cutoff_slider" type="NORMAL">
           <x>REL 250</x>
           <y>REL 0</y>
           <w>COMPLEMENT 1</w>
@@ -58,7 +58,7 @@
       <w>SCALE 0.864167</w>
       <h>ABS 24</h>
       <children>
-        <Layout name="velocity_freq_scalar_label" type="NORMAL">
+        <Layout name="pitch_amt_label" type="NORMAL">
           <x>REL 0</x>
           <y>REL 0</y>
           <w>REL 250</w>
@@ -66,7 +66,56 @@
           <children>
           </children>
         </Layout>
-        <Layout name="velocity_freq_scalar_slider" type="NORMAL">
+        <Layout name="pitch_amt_slider" type="NORMAL">
+          <x>REL 250</x>
+          <y>REL 0</y>
+          <w>COMPLEMENT 1</w>
+          <h>SCALE 1.000000</h>
+          <children>
+          </children>
+        </Layout>
+      </children>
+    </Layout>
+    <Layout name="row" type="NORMAL">
+      <x>SCALE 0.046667</x>
+      <y>STACK 24</y>
+      <w>SCALE 0.864167</w>
+      <h>ABS 24</h>
+      <children>
+        <Layout name="vel_amt_label" type="NORMAL">
+          <x>REL 0</x>
+          <y>REL 0</y>
+          <w>REL 250</w>
+          <h>SCALE 1.000000</h>
+          <children>
+          </children>
+        </Layout>
+        <Layout name="vel_amt_slider" type="NORMAL">
+          <x>REL 250</x>
+          <y>REL 0</y>
+          <w>COMPLEMENT 1</w>
+          <h>SCALE 1.000000</h>
+          <children>
+          </children>
+        </Layout>
+      </children>
+    </Layout>
+
+    <Layout name="row" type="NORMAL">
+      <x>SCALE 0.046667</x>
+      <y>STACK 24</y>
+      <w>SCALE 0.864167</w>
+      <h>ABS 24</h>
+      <children>
+        <Layout name="env_amt_label" type="NORMAL">
+          <x>REL 0</x>
+          <y>REL 0</y>
+          <w>REL 250</w>
+          <h>SCALE 1.000000</h>
+          <children>
+          </children>
+        </Layout>
+        <Layout name="env_amt_slider" type="NORMAL">
           <x>REL 250</x>
           <y>REL 0</y>
           <w>COMPLEMENT 1</w>
