--- a/assets/layouts/track_settings_saturation.xml
+++ b/assets/layouts/track_settings_saturation.xml
@@ -50,6 +50,22 @@
           <children>
           </children>
         </Layout>
+	<Layout name="symmetry_label" type="NORMAL">
+          <x>REL 0</x>
+          <y>STACK 0</y>
+          <w>SCALE 1.000000</w>
+          <h>SCALE 0.5</h>
+          <children>
+          </children>
+        </Layout>
+        <Layout name="symmetry_slider" type="NORMAL">
+          <x>REL 0</x>
+          <y>STACK 0</y>
+          <w>SCALE 1.000000</w>
+          <h>SCALE 0.5</h>
+          <children>
+          </children>
+        </Layout>
       </children>
     </Layout>
     <Layout name="track_selection" type="NORMAL">
@@ -110,7 +126,7 @@
     </Layout>
     <Layout name="type_radio" type="NORMAL">
       <x>SCALE 0.06</x>
-      <y>REL 196</y>
+      <y>REL 240</y>
       <w>REL 303</w>
       <h>REL 80</h>
       <children>
