session refactor cleanup: timeline owns track area, no layout member; timelines share gui objects (timecode textbox, lemniscate); still need to handle project audio settings changes

--- a/assets/layouts/jackdaw_main_layout.xml
+++ b/assets/layouts/jackdaw_main_layout.xml
@@ -140,7 +140,7 @@
 		</Layout>
                 <Layout name="tracks_area" type="NORMAL">
                     <x>REL 0</x>
-                    <y>STACK 0</y>
+                    <y>REL 28</y>
                     <w>SCALE 1.000000</w>
                     <h>REL 0</h>
                     <index>2</index>
