--- a/assets/layouts/piano.xml
+++ b/assets/layouts/piano.xml
@@ -84,7 +84,7 @@
       <children>
       </children>
     </Layout>
-    <Layout name="f" type="NORMAL">
+    <Layout name="f2" type="NORMAL">
       <x>STACK 0</x>
       <y>REL 0</y>
       <w>SCALE 0.090909</w>
